Update JavaCalculator03.java
Made changes required by Java 25